# setu

./: .gitignore  README.md
android/app/: build.gradle.kts  build_rust.sh
android/app/src/main/java/com/example/myapplication/: MainActivity.kt  SkiaSurfaceView.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
src/: Cargo.toml
src/src/: Button.rs  View.rs  dsl.rs  lib copy.rs  lib.rs  main.rs
