[package]
name = "tiny_skia_android"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
android_logger = "0.14.1"
jni = "0.21.1"
log = "0.4.22"
minifb = "0.27.0"
stretch = "0.3.2"
taffy = "0.5.2"
tiny-skia = "0.11.4"
